<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="25dp"
        >

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:paddingLeft="100dp"
            android:paddingTop="10dp"
            android:paddingRight="100dp"
            android:paddingBottom="10dp"
            android:text="@string/example_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <CheckBox
        android:id="@+id/white_sauce"
        style="@style/CustomCheckbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/white_sauce" />

    <CheckBox
        android:id="@+id/tomato_sauce"
        style="@style/CustomCheckbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tomato_sauce"/>

    <CheckBox
        android:id="@+id/fresh_mozzarella"
        style="@style/CustomCheckbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fresh_mozzarella"/>

    <CheckBox
        android:id="@+id/dried_tomatoes"
        style="@style/CustomCheckbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dried_tomatoes"/>

    <CheckBox
        android:id="@+id/pepperoni"
        style="@style/CustomCheckbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pepperoni"/>

    <CheckBox
        android:id="@+id/mushrooms"
        style="@style/CustomCheckbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mushrooms"/>

    <CheckBox
        android:id="@+id/onions"
        style="@style/CustomCheckbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onions"/>

    <CheckBox
        android:id="@+id/green_peppers"
        style="@style/CustomCheckbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/green_peppers"/>

    <CheckBox
        android:id="@+id/anchovies"
        style="@style/CustomCheckbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anchovies"/>

</LinearLayout>